--- a/src/main/resources/templates/HomeScreen.fxml
+++ b/src/main/resources/templates/HomeScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.PieChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -7,25 +8,22 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="554.0" prefWidth="812.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="system.HomeController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="576.0" prefWidth="842.0" stylesheets="@../styles/dark-mode.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="system.HomeController">
    <children>
       <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="26.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../images/ai.png" />
          </image>
       </ImageView>
-      <Label layoutX="261.0" layoutY="66.0" text="Knoledge Based System">
+      <Label layoutX="273.0" layoutY="58.0" text="Knoledge Based System">
          <font>
             <Font name="Arial Rounded MT Bold" size="25.0" />
          </font>
       </Label>
-      <Label layoutX="365.0" layoutY="523.0" text="gabrielrusu.dev">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <Button layoutX="75.0" layoutY="277.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="75.0" layoutY="327.0" mnemonicParsing="false" text="Button" />
-      <Button layoutX="75.0" layoutY="378.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="55.0" layoutY="263.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Add Knoledge" />
+      <Button layoutX="55.0" layoutY="305.0" mnemonicParsing="false" text="Find Knowledge" />
+      <Button layoutX="55.0" layoutY="344.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Info" />
+      <Label layoutX="380.0" layoutY="545.0" text="gabrielrusu.dev" />
+      <PieChart layoutX="275.0" layoutY="118.0" prefHeight="421.0" prefWidth="538.0" />
    </children>
 </AnchorPane>
