--- a/src/main/resources/templates/HomeScreen.fxml
+++ b/src/main/resources/templates/HomeScreen.fxml
@@ -15,15 +15,15 @@
             <Image url="@../images/ai.png" />
          </image>
       </ImageView>
-      <Label layoutX="273.0" layoutY="58.0" text="Knoledge Based System">
+      <Label layoutX="314.0" layoutY="66.0" text="Knoledge Based System">
          <font>
             <Font name="Arial Rounded MT Bold" size="25.0" />
          </font>
       </Label>
-      <Button layoutX="55.0" layoutY="263.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Add Knoledge" />
-      <Button layoutX="55.0" layoutY="305.0" mnemonicParsing="false" text="Find Knowledge" />
-      <Button layoutX="55.0" layoutY="344.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" text="Info" />
+      <Button layoutX="31.0" layoutY="288.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="System Knowledge Base" />
+      <Button layoutX="31.0" layoutY="249.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="System Rules" />
+      <Button layoutX="31.0" layoutY="325.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="150.0" text="Info" />
       <Label layoutX="380.0" layoutY="545.0" text="gabrielrusu.dev" />
-      <PieChart layoutX="275.0" layoutY="118.0" prefHeight="421.0" prefWidth="538.0" />
+      <PieChart layoutX="193.0" layoutY="107.0" prefHeight="421.0" prefWidth="626.0" />
    </children>
 </AnchorPane>
