--- a/src/main/resources/templates/HomeScreen.fxml
+++ b/src/main/resources/templates/HomeScreen.fxml
@@ -20,8 +20,8 @@
             <Font name="Arial Rounded MT Bold" size="25.0" />
          </font>
       </Label>
-      <Button layoutX="31.0" layoutY="300.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="150.0" text="System Knowledge Base" />
-      <Button layoutX="32.0" layoutY="260.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="150.0" text="System Rules" />
+      <Button layoutX="31.0" layoutY="300.0" mnemonicParsing="false" onAction="#goToKnowledgeBase" prefHeight="31.0" prefWidth="150.0" text="System Knowledge Base" />
+      <Button layoutX="32.0" layoutY="260.0" mnemonicParsing="false" onAction="#goToRules" prefHeight="31.0" prefWidth="150.0" text="System Rules" />
       <Button layoutX="31.0" layoutY="338.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="150.0" text="Info" />
       <Label layoutX="409.0" layoutY="569.0" text="gabrielrusu.dev" />
       <PieChart layoutX="223.0" layoutY="88.0" prefHeight="477.0" prefWidth="646.0" />
