--- a/src/main/resources/templates/KnowledgeBaseScreen.fxml
+++ b/src/main/resources/templates/KnowledgeBaseScreen.fxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@../styles/dark-mode.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="system.KnowledgeBaseController">
    <children>
@@ -13,5 +13,6 @@
             <Font name="Arial Rounded MT Bold" size="25.0" />
          </font>
       </Label>
+      <Button layoutX="14.0" layoutY="28.0" mnemonicParsing="false" onAction="#goBack" text="&lt; Back" />
    </children>
 </AnchorPane>
