--- a/src/main/resources/templates/KnowledgeBaseScreen.fxml
+++ b/src/main/resources/templates/KnowledgeBaseScreen.fxml
@@ -3,7 +3,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
@@ -18,13 +17,7 @@
         </Label>
         <Button layoutX="14.0" layoutY="28.0" mnemonicParsing="false" onAction="#goBack" text="&lt; Back" />
         <Button layoutX="830.0" layoutY="28.0" mnemonicParsing="false" onAction="#goBack" text="Reload" />
-        <TableView fx:id="knowledgeTable" layoutX="13.0" layoutY="160.0" prefHeight="409.0" prefWidth="876.0">
-            <columns>
-                <TableColumn prefWidth="228.0" text="C1" />
-                <TableColumn minWidth="0.0" prefWidth="168.0" text="C2" />
-                <TableColumn prefWidth="189.0" text="Column X" />
-            </columns>
-        </TableView>
+        <TableView fx:id="knowledgeTable" layoutX="13.0" layoutY="160.0" prefHeight="409.0" prefWidth="876.0" />
         <ChoiceBox fx:id="brandChoice" layoutX="62.0" layoutY="107.0" prefHeight="22.0" prefWidth="124.0" />
         <ChoiceBox fx:id="typeChoice" layoutX="762.0" layoutY="105.0" prefHeight="22.0" prefWidth="124.0" />
         <Label layoutX="14.0" layoutY="106.0" prefHeight="24.0" prefWidth="56.0" text="Brand">
