--- a/src/main/resources/templates/RulesScreen.fxml
+++ b/src/main/resources/templates/RulesScreen.fxml
@@ -1,13 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@../styles/dark-mode.css"
-   xmlns="http://javafx.com/javafx/11.0.1"
-   xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@../styles/dark-mode.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="system.controllers.RulesController">
    <children>
       <Label layoutX="409.0" layoutY="569.0" text="gabrielrusu.dev" />
       <Label layoutX="368.0" layoutY="14.0" stylesheets="@../styles/dark-mode.css" text="System Rules">
@@ -15,5 +13,6 @@
             <Font name="Arial Rounded MT Bold" size="25.0" />
          </font>
       </Label>
+      <Button layoutX="14.0" layoutY="17.0" mnemonicParsing="false" onAction="#goBack" text="&lt; Back" />
    </children>
 </AnchorPane>
