--- a/src/main/resources/templates/KnowledgeBaseScreen.fxml
+++ b/src/main/resources/templates/KnowledgeBaseScreen.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -29,5 +30,17 @@
                 <Font name="Arial Rounded MT Bold" size="14.0" />
             </font>
         </Label>
+      <Label layoutX="300.0" layoutY="110.0" text="Price starting at">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="485.0" layoutY="110.0" text="up to">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="14.0" />
+         </font>
+      </Label>
+      <TextField layoutX="413.0" layoutY="107.0" prefHeight="23.0" prefWidth="66.0" />
+      <TextField layoutX="522.0" layoutY="106.0" prefHeight="23.0" prefWidth="82.0" />
     </children>
 </AnchorPane>
