--- a/src/main/resources/templates/KnowledgeBaseScreen.fxml
+++ b/src/main/resources/templates/KnowledgeBaseScreen.fxml
@@ -11,7 +11,7 @@
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@../styles/dark-mode.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="system.controllers.KnowledgeBaseController">
     <children>
         <Label layoutX="409.0" layoutY="569.0" text="gabrielrusu.dev" />
-        <Label layoutX="300.0" layoutY="25.0" text="System Knowledge Base">
+        <Label layoutX="179.0" layoutY="24.0" text="Electronic Devices Knowledge Base System">
             <font>
                 <Font name="Arial Rounded MT Bold" size="25.0" />
             </font>
@@ -30,17 +30,19 @@
                 <Font name="Arial Rounded MT Bold" size="14.0" />
             </font>
         </Label>
-      <Label layoutX="300.0" layoutY="110.0" text="Price starting at">
+      <Label layoutX="204.0" layoutY="110.0" text="Price starting at">
          <font>
             <Font name="Arial Rounded MT Bold" size="14.0" />
          </font>
       </Label>
-      <Label layoutX="485.0" layoutY="110.0" text="up to">
+      <Label layoutX="392.0" layoutY="110.0" text="up to">
          <font>
             <Font name="Arial Rounded MT Bold" size="14.0" />
          </font>
       </Label>
-      <TextField layoutX="413.0" layoutY="107.0" prefHeight="23.0" prefWidth="66.0" />
-      <TextField layoutX="522.0" layoutY="106.0" prefHeight="23.0" prefWidth="82.0" />
+      <TextField fx:id="startPrice" layoutX="320.0" layoutY="107.0" prefHeight="23.0" prefWidth="66.0" />
+      <TextField fx:id="endPrice" layoutX="427.0" layoutY="107.0" prefHeight="23.0" prefWidth="82.0" />
+      <Button layoutX="519.0" layoutY="108.0" mnemonicParsing="false" onAction="#searchAll" text="Search" />
+      <Button layoutX="585.0" layoutY="108.0" mnemonicParsing="false" onAction="#resetAll" text="Reset" />
     </children>
 </AnchorPane>
